resolve alignment bug

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -51,6 +51,10 @@
   padding: 16px;
 }
 
+.card-product-infos {
+  width: 100%;
+}
+
 
 // .simple_form {
   // background-color: $card-background;
